Fix back-end tests not being run

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,12 +62,12 @@ jobs:
         uses: actions/cache@v3
         with:
           path: Specify6
-          key: specify6.8.01-cache
+          key: specify6
 
       - name: Install Specify 6
         if: steps.cache-specify6.outputs.cache-hit != 'true'
         run: |
-          wget https://update.specifysoftware.org/6801/Specify_unix_64.sh
+          wget https://update.specifysoftware.org/6802/Specify_unix_64.sh
           sh Specify_unix_64.sh -q -dir ./Specify6
 
       - name: Patch Specify datamodel (Sam, you made the Attachment.origFilename too long)
@@ -111,6 +111,9 @@ jobs:
 
       - name: Run Mypy type checker
         run: VIRTUAL_ENV=./ve make typecheck
+
+      - name: Run test suite
+        run: ./ve/bin/python manage.py test --keepdb
 
   test-front-end:
     name: Run front-end tests
